<resources>
    <!-- Values of the Step 1 -->
    <string name="app_name">Renta Calculator</string>
    <string name="paso1_3">Paso 1 de 5</string>
    <string name="salarioBrutoHint">Introducir salario bruto</string>
    <string name="retenidoHint">Introducir porcentaje retenido</string>
    <string name="retencionHint">Introducir porcentaje de retención</string>
    <string name="exentosHint">Introducir cantidad exentos</string>
    <string name="contratoHint">Seleccionar tipo contrato</string>
    <string name="cotizacionHint">Introducir porcentaje de cotizacion</string>
    <string name="cotizadoHint">Introducir cantidad cotizada</string>
    <string name="extrasOrdinariasHint">Introducir Horas extra ordinarias</string>
    <string name="extrasFuerzaHint">Introducir Horas extra por fuerza mayor</string>

    <!-- Values of the Step 2 -->
    <string name="paso2_3">Paso 2 de 5</string>
    <string name="comunidadHint">Introducir comunidad autónoma</string>
    <string name="edadHint">Edad</string>
    <string name="discapHint">Presenta alguna discapacidad?</string>
    <string name="ayudamovilidadHint">Acredita necesitar ayuda de 3os o tener movilidad reducida?</string>
    <string name="hijosHint">Introducir número de hijos</string>

    <!-- Values of the Step 3 -->
    <string name="paso3_3">Paso 3 de 5</string>
    <string name="hijos">Hijos</string>
    <string name="ascendientes">Ascendientes</string>
    <string name="hijosMenores3AnosHint">Nº hijos menores de 3 años</string>
    <string name="hijosMenores25AnosDiscapacidadHint">Nº hijos menores de 25 años o con discapacidad</string>
    <string name="ascendientesMayores75AnosHint">Nº ascendientes mayores de 75 años</string>
    <string name="ascendientesMayores65AnosDiscapacidadHint">Nº ascendientes mayores de 65 años o discapacitados</string>

    <!-- Values of the Step 4 -->
    <string name="paso4_5">Paso 4 de 5</string>
    <string name="deduccionesEstatalesHint">Introducir deducciones estatales</string>
    <string name="deduccionesAutonomicasHint">Introducir deducciones autonómicas</string>
    <string name="movilidadGeograficaHint">Está en movilidad geográfica?</string>
    <string name="interesesBrutosHint">Introducir intereses brutos</string>
    <string name="donacionesHint">Introducir donaciones</string>
    <string name="donadoHint"> Más de 3 años donando ?</string>

    <!-- Values of the Step Resultado -->
    <string name="paso_resultado">Resultado</string>
    <string name="cuotaLiquida">Cuota Líquida</string>
    <string name="retenidoTotal">Retenido Total</string>
    <string name="donacionEfectiva">Donación efectiva</string>
    <string name="resultado">Resultado</string>
    <string name="tasaReal">Retención Real</string>
    <string name="tasaAplicada">Retención Recomendada</string>
    <string name="aDevolver">A RECIBIR</string>
    <string name="aPagar">A PAGAR</string>
    <string name="obligacion_obligatorio">Es obligatorio hacer la declaración de la renta*</string>
    <string name="obligacion_exento">No hay obligación de hacer la declaración de la renta*</string>
    <string name="obligacion_depende">Si las retribuciones provienen de un sólo pagador, no hay obligación de hacer la declaración de la renta*</string>
    <string name="obligacion_aclaracion">*Verifique en su declaración si realmente tiene obligación o no de hacer la declaración de la renta</string>

    <!-- Values of bottoms -->
    <string name="btnAnterior">Anterior</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnResultado">Resultado</string>

    <!-- ENUM -->
    <!-- Values of the contract type -->
    <string name="contratoIndefinido">Contrato Indefinido</string>
    <string name="contratoTemporal">Contrato Temporal</string>

    <!-- Values of disabilites -->
    <string name="disability33">Igual o superior al 33%</string>
    <string name="disability65">Igual o superior al 65%</string>
    <string name="disabilityNone">Ninguna discapacidad</string>


</resources>
